<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mapaid"
        android:visibility="visible">
        <fragment
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:visibility="visible"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:id="@+id/val_tierra">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="50dp"
            android:visibility="visible">
        <LinearLayout
            android:id="@+id/cajaEditararea"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:visibility="visible">
            <EditText
                android:id="@+id/area"
                android:text="@string/texto9"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_margin="8dp"
                android:textColor="@color/blanco"
                android:background="@color/negro"
                android:inputType="numberDecimal"
                android:textSize="20dp"
                android:gravity="center">
            </EditText>
            <ImageView
                android:id="@+id/cambiar_area"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@color/negro">
            </ImageView>
        </LinearLayout>
            <LinearLayout
                android:id="@+id/cajaArea"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:visibility="gone"
                >
                <TextView
                    android:id="@+id/area_total"
                    android:layout_width="200dp"
                    android:layout_height="70dp"
                    android:layout_margin="8dp"
                    android:textColor="@color/blanco"
                    android:hint="@string/texto9"
                    android:background="@color/negro"
                    android:textSize="20dp"
                    android:gravity="center"
                    >
                </TextView>
                <ImageView
                    android:id="@+id/area_aprobada"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@color/negro"
                    >
                </ImageView>

            </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
        <TextView
            android:layout_width="250dp"
            android:id="@+id/puntoPartida"
            android:layout_height="70dp"
            android:background="@color/negro"
            android:text="Direccion "
            android:textSize="14dp"
            android:layout_margin="30dp"
            android:textColor="@color/blanco"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            />

        </LinearLayout>

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center">
             <TextView
                 android:layout_width="250dp"
                 android:id="@+id/valTierra"
                 android:layout_height="70dp"
                 android:background="@color/negro"
                 android:text="@string/texto8"
                 android:textSize="14dp"
                 android:layout_margin="30dp"
                 android:textColor="@color/blanco"
                 android:gravity="center"
                 android:layout_marginBottom="10dp"
                 />
                    </LinearLayout>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:gravity="center">

               <TextView
                   android:layout_width="250dp"
                   android:id="@+id/val_total_tierra"
                   android:layout_height="70dp"
                   android:background="@color/negro"
                   android:text="@string/texto10"
                   android:textSize="14dp"
                   android:layout_margin="30dp"
                   android:textColor="@color/blanco"
                   android:gravity="center"
                   android:layout_marginBottom="10dp"
                   />
                    </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
                <Button
                android:layout_width="180dp"
                android:id="@+id/sigCalculo"
                android:layout_height="70dp"
                android:background="@color/negro"
                android:text="@string/texto7"
                android:textSize="16dp"
                android:layout_margin="15dp"
                android:textColor="@color/blanco"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/valor_construccion"
        android:visibility="visible">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="50dp"
            android:visibility="visible">
            <LinearLayout
                android:id="@+id/cajaAreaCons"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:visibility="visible">
                <EditText
                    android:id="@+id/areaConstruccion"
                    android:text="@string/texto11"
                    android:layout_width="200dp"
                    android:layout_height="70dp"
                    android:layout_margin="8dp"
                    android:textColor="@color/negro"
                    android:background="@color/blanco"
                    android:inputType="numberDecimal"
                    android:textSize="20dp"
                    android:gravity="center">
                </EditText>
                <ImageView
                    android:id="@+id/cambiar_area_construccion"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:background="@color/negro">
                </ImageView>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/cajaCons"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:visibility="gone">
                <TextView
                    android:id="@+id/area_total_construccion"
                    android:layout_width="200dp"
                    android:layout_height="70dp"
                    android:layout_margin="8dp"
                    android:textColor="@color/blanco"
                    android:hint="@string/texto11"
                    android:background="@color/negro"
                    android:textSize="20dp"
                    android:gravity="center">
                </TextView>
                <ImageView
                    android:id="@+id/area_construccion_aprobada"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@color/negro">
                </ImageView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
                <Spinner
                    android:layout_width="250dp"
                    android:id="@+id/tipo_estructura"
                    android:layout_height="80dp"
                    android:background="@color/blanco"
                    android:hint="@string/texto12"
                    android:textSize="30dp"
                    android:layout_margin="30dp"
                    android:textColor="@color/negro"
                    android:gravity="center"
                    android:layout_marginBottom="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
                <Spinner
                    android:layout_width="250dp"
                    android:id="@+id/materiales_muros"
                    android:layout_height="70dp"
                    android:background="@color/blanco"
                    android:text="@string/texto13"
                    android:textSize="14dp"
                    android:layout_margin="30dp"
                    android:textColor="@color/negro"
                    android:gravity="center"
                    android:layout_marginBottom="10dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Spinner
                    android:layout_width="250dp"
                    android:id="@+id/entrepisos"
                    android:layout_height="70dp"
                    android:background="@color/blanco"
                    android:text="@string/texto14"
                    android:textSize="14dp"
                    android:layout_margin="30dp"
                    android:textColor="@color/negro"
                    android:gravity="center"
                    android:layout_marginBottom="10dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Spinner
                    android:layout_width="250dp"
                    android:id="@+id/cubiertas"
                    android:layout_height="70dp"
                    android:background="@color/blanco"
                    android:text="@string/texto15"
                    android:textSize="14dp"
                    android:layout_margin="30dp"
                    android:textColor="@color/negro"
                    android:gravity="center"
                    android:layout_marginBottom="10dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
                <Button
                    android:layout_width="180dp"
                    android:id="@+id/sig_Calculo"
                    android:layout_height="70dp"
                    android:background="@color/negro"
                    android:text="@string/texto7"
                    android:textSize="16dp"
                    android:layout_margin="15dp"
                    android:textColor="@color/blanco"
                    android:gravity="center"
                    android:layout_marginBottom="5dp"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/valor_acabados"
        android:visibility="visible"
        android:background="@color/blanco">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="50dp"
            android:visibility="visible"
            android:background="@color/blanco">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
                <Spinner
                    android:layout_width="250dp"
                    android:id="@+id/acabados_muros"
                    android:layout_height="80dp"
                    android:background="@color/blanco"
                    android:hint="@string/texto12"
                    android:textSize="30dp"
                    android:layout_margin="30dp"
                    android:textColor="@color/negro"
                    android:gravity="center"
                    android:layout_marginBottom="10dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
                <Spinner
                    android:layout_width="250dp"
                    android:id="@+id/acabados_pisos"
                    android:layout_height="70dp"
                    android:background="@color/blanco"
                    android:text="@string/texto13"
                    android:textSize="14dp"
                    android:layout_margin="30dp"
                    android:textColor="@color/negro"
                    android:gravity="center"
                    android:layout_marginBottom="10dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Spinner
                    android:layout_width="250dp"
                    android:id="@+id/acabados_fachadas"
                    android:layout_height="70dp"
                    android:background="@color/blanco"
                    android:text="@string/texto14"
                    android:textSize="14dp"
                    android:layout_margin="30dp"
                    android:textColor="@color/negro"
                    android:gravity="center"
                    android:layout_marginBottom="10dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Spinner
                    android:layout_width="250dp"
                    android:id="@+id/acabados_ventaneria"
                    android:layout_height="70dp"
                    android:background="@color/blanco"
                    android:text="@string/texto15"
                    android:textSize="14dp"
                    android:layout_margin="30dp"
                    android:textColor="@color/negro"
                    android:gravity="center"
                    android:layout_marginBottom="10dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
                <Spinner
                    android:layout_width="250dp"
                    android:id="@+id/acabados_recubrimiento"
                    android:layout_height="70dp"
                    android:background="@color/blanco"
                    android:text="@string/texto15"
                    android:textSize="14dp"
                    android:layout_margin="30dp"
                    android:textColor="@color/negro"
                    android:gravity="center"
                    android:layout_marginBottom="10dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
                <Spinner
                    android:layout_width="250dp"
                    android:id="@+id/acabadosbanos"
                    android:layout_height="70dp"
                    android:background="@color/blanco"
                    android:text="@string/texto15"
                    android:textSize="14dp"
                    android:layout_margin="30dp"
                    android:textColor="@color/negro"
                    android:gravity="center"
                    android:layout_marginBottom="10dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">
                <Button
                    android:layout_width="150dp"
                    android:id="@+id/sigPag"
                    android:layout_height="40dp"
                    android:background="@color/negro"
                    android:text="@string/texto7"
                    android:textSize="16dp"
                    android:layout_margin="15dp"
                    android:textColor="@color/blanco"
                    android:gravity="center"
                    android:layout_marginBottom="5dp"
                    />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>







